first image added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
         <div id="quizQuestions">
         </div>
         <br>
-        <button type="button" class="btn btn-success" id="begin">Begin!</button>
+        <div class="container">
+        	<button type="button" class="btn btn-success" id="begin">Begin!</button>
+        	<div class="timer" data-seconds-left=30 id="counter"></div>
+        </div>
     </div>
     </div>
-    
+
+
     <script src="assets/javascript/app.js"></script>
+    <!--<script src="jquery.js"></script>-->
+	<script src="../jQuery-Simple-Timer/jquery.simple.timer.js"></script>
 </body>
 
 </html>
