--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             <div id="quizQuestions">
             </div>
             <div id="questionAnswers">
+                <div class="answers answers-1"></div>
+                + +
+                <div class="answers answers-2"></div>
+                + +
+                <div class="answers answers-3"></div>
+                + +
+                <div class="answers answers-4"></div>
             </div>
             <br>
             <div class="container">
