--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
             <div id="quizQuestions">
             </div>
             <div id="questionAnswers">
-                <div class="answers answers-1"></div>
-                + +
-                <div class="answers answers-2"></div>
-                + +
-                <div class="answers answers-3"></div>
-                + +
-                <div class="answers answers-4"></div>
+                <div class="answers">
+                    <button type="button" class="btn btn-default answers-1"></button>
+                </div>
+                <div class="answers">
+                    <button type="button" class="btn btn-default answers-2"></button>
+                </div>
+                <div class="answers">
+                    <button type="button" class="btn btn-default answers-3"></button>
+                </div>
+                <div class="answers">
+                    <button type="button" class="btn btn-default answers-4"></button>
+                </div>
             </div>
             <br>
             <div class="container">
