--- a/index.html
+++ b/index.html
@@ -19,18 +19,10 @@
             <div id="quizQuestions">
             </div>
             <div id="questionAnswers">
-                <div class="answers">
-                    <button type="button" class="btn btn-default answers-1"></button>
-                </div>
-                <div class="answers">
-                    <button type="button" class="btn btn-default answers-2"></button>
-                </div>
-                <div class="answers">
-                    <button type="button" class="btn btn-default answers-3"></button>
-                </div>
-                <div class="answers">
-                    <button type="button" class="btn btn-default answers-4"></button>
-                </div>
+                    <button type="button" class="btn btn-default answers-1 answers"></button>
+                    <button type="button" class="btn btn-default answers-2 answers"></button>
+                    <button type="button" class="btn btn-default answers-3 answers"></button>
+                    <button type="button" class="btn btn-default answers-4 answers"></button>
             </div>
             <br>
             <div class="container">
