--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div id="quizQuestions">
             </div>
             <div id="questionAnswers">
-                    <button type="button" class="btn btn-default answers-1 answers"></button>
-                    <button type="button" class="btn btn-default answers-2 answers"></button>
-                    <button type="button" class="btn btn-default answers-3 answers"></button>
-                    <button type="button" class="btn btn-default answers-4 answers"></button>
+                    <button type="button" class="btn btn-default answers-1 answers" value="1"></button>
+                    <button type="button" class="btn btn-default answers-2 answers" value="2"></button>
+                    <button type="button" class="btn btn-default answers-3 answers" value="3"></button>
+                    <button type="button" class="btn btn-default answers-4 answers" value="4"></button>
             </div>
             <br>
             <div class="container">
