--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <div id="correct"></div>
                 <div id="wrong"></div>
             </div>
+            <div id=answerImage>
+        </div>
         </div>
     </div>
     <script src="assets/javascript/app.js"></script>
