final phases tweaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container">
         <div id="quiz-container">
-        	<p id="welcome">Welcome to Nasty Trivia! Test your knowledge about a few brave, bright, creative, butt-kicking ladies. Press Begin when you're ready!</p>
+        	<p class="welcome">Welcome to Nasty Trivia! Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
+        	<p class="welcome">When you're done, stick around to scroll and read some wisdom from these Nasty Women!</p>
         	<div class="crossorigin">
             <div id="image-container">
             </div>
