--- a/index.html
+++ b/index.html
@@ -7,42 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Link to Google Fonts Used -->
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Roboto" rel="stylesheet">
+    <!-- Link to jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Link to my css sheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
         <div id="quiz-container">
-        	<p class="welcome">Welcome to Nasty Trivia! Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
-        	<p class="welcome">When you're done, stick around to scroll and read some wisdom from these Nasty Women!</p>
-        	<div class="crossorigin">
-            <div id="image-container">
-            </div>
-            <div id="quizQuestions">
-            </div>
-            <div id="questionAnswers">
-                <button type="button" class="btn btn-default answers-1 answers" value="1"></button>
-                <button type="button" class="btn btn-default answers-2 answers" value="2"></button>
-                <button type="button" class="btn btn-default answers-3 answers" value="3"></button>
-                <button type="button" class="btn btn-default answers-4 answers" value="4"></button>
-            </div>
-            <br>
-            <div class="container">
-                <button type="button" class="btn" id="button">Begin!</button>
-                <div class="timer" data-seconds-left=30 id="counter"></div>
-                <div id="correct"></div>
-                <div id="wrong"></div>
-            </div>
-            <div id="answerImage">
-            	<!--<img src="assets/images/template.png">-->
+            <p class="welcome">Welcome to Nasty Trivia! Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
+            <p class="welcome">When you're done, stick around to scroll and read some wisdom from these Nasty Women!</p>
+            <div class="crossorigin">
+                <div id="image-container">
+                </div>
+                <div id="quizQuestions">
+                </div>
+                <div id="questionAnswers">
+                    <button type="button" class="btn btn-default answers-1 answers" value="1"></button>
+                    <button type="button" class="btn btn-default answers-2 answers" value="2"></button>
+                    <button type="button" class="btn btn-default answers-3 answers" value="3"></button>
+                    <button type="button" class="btn btn-default answers-4 answers" value="4"></button>
+                </div>
+                <br>
+                <div class="container">
+                    <button type="button" class="btn" id="button">Begin!</button>
+                    <div class="timer" data-seconds-left=30 id="counter"></div>
+                    <div id="correct"></div>
+                    <div id="wrong"></div>
+                </div>
+                <div id="answerImage">
+                </div>
             </div>
         </div>
     </div>
-    </div>
     <script src="assets/javascript/app.js"></script>
-    <!--<script src="../jQuery-Simple-Timer/jquery.simple.timer.js"></script>-->
 </body>
 
 </html>
