--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
                 <div id="quizQuestions">
                 </div>
                 <div id="questionAnswers">
-                    <button type="button" class="btn btn-default answers-1 answers" value="1"></button>
+                    <a class="waves-effect waves-teal btn-flat answers-1 answers" value="1"></a>
+                    <a class="waves-effect waves-teal btn-flat answers-2 answers" value="2"></a>
+                    <a class="waves-effect waves-teal btn-flat answers-3 answers" value="3"></a>
+                    <a class="waves-effect waves-teal btn-flat answers-4 answers" value="4"></a>
+                    <!-- <button type="button" class="btn btn-default answers-1 answers" value="1"></button>
                     <button type="button" class="btn btn-default answers-2 answers" value="2"></button>
                     <button type="button" class="btn btn-default answers-3 answers" value="3"></button>
-                    <button type="button" class="btn btn-default answers-4 answers" value="4"></button>
+                    <button type="button" class="btn btn-default answers-4 answers" value="4"></button> -->
                 </div>
                 <br>
                 <div class="container">
