--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome Link -->
     <script src="https://use.fontawesome.com/f59413c927.js"></script>
     <!-- Google Fonts Link -->
-    <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Josefin+Sans|Patrick+Hand+SC|Roboto" rel="stylesheet">
     <!-- Link to Materialize Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -24,16 +24,48 @@
 
 <body>
     <main>
-        <nav>
-		    <div class="nav-wrapper">
-		      <img src="assets/images/nasty-woman-pin.jpg" class="brand-logo center">
-		    </div>
-		  </nav>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper center-align">
+                    <img id="nav-image" src="assets/images/nasty-woman-pin.png" class="responsive-img">
+                </div>
+            </nav>
+        </div>
+        <div class="row center-align">
+            <div class="col s12 m10 offset-m1 l8 offset-l2">
+                <div id="quiz-container">
+                    <p class="welcome">Welcome to Nasty Trivia! Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
+                    <p class="welcome">When you're done, stick around to scroll and read some wisdom from these Nasty Women!</p>
+                    <div>
+                        <div id="image-container">
+                        </div>
+                        <div id="quizQuestions">
+                        </div>
+                        <div id="questionAnswers">
+                            <a class="waves-effect waves-teal btn lime darken-1 answers-1 answers z-depth-4" value="1"></a>
+                            <a class="waves-effect waves-teal btn lime darken-1 answers-2 answers z-depth-4" value="2"></a>
+                            <a class="waves-effect waves-teal btn lime darken-1 answers-3 answers z-depth-4" value="3"></a>
+                            <a class="waves-effect waves-teal btn lime darken-1 answers-4 answers z-depth-4" value="4"></a>
+                        </div>
+                        <br>
+                        <div class="container">
+                        	<a class="waves-effect waves-teal btn lime darken-1 black-text" id="button">Begin!</a>
+                            <!-- <button type="button" class="btn" id="button">Begin!</button> -->
+                            <div class="timer" data-seconds-left=30 id="counter"></div>
+                            <div id="correct"></div>
+                            <div id="wrong"></div>
+                        </div>
+                        <div id="answerImage">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="page-footer">
         <div class="footer-copyright">
-            <div class="container center my-name white-text">
-                <a href="https://valarier.github.io/valarie-regas/index.html" target="_blank">© 2017 Valarie Regas</a>
+            <div class="container center my-name">
+                <a href="https://valarier.github.io/valarie-regas/index.html" target="_blank" class="white-text">© 2017 Valarie Regas</a>
             </div>
         </div>
     </footer>
