--- a/index2.html
+++ b/index2.html
@@ -34,23 +34,24 @@
         <div class="row center-align">
             <div class="col s12 m10 offset-m1 l8 offset-l2">
                 <div id="quiz-container">
-                    <p class="welcome">Welcome to Nasty Trivia! Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
-                    <p class="welcome">When you're done, stick around to scroll and read some wisdom from these Nasty Women!</p>
+                    <h1>Welcome to Nasty Trivia!</h1>
+                    <p class="welcome">Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
+                    <p class="welcome">When you're done, stick around to read some wisdom from these Nasty Women!</p>
                     <div>
                         <div id="image-container">
                         </div>
                         <div id="quizQuestions">
                         </div>
                         <div id="questionAnswers">
-                            <a class="waves-effect waves-teal btn lime darken-1 answers-1 answers z-depth-4" value="1"></a>
-                            <a class="waves-effect waves-teal btn lime darken-1 answers-2 answers z-depth-4" value="2"></a>
-                            <a class="waves-effect waves-teal btn lime darken-1 answers-3 answers z-depth-4" value="3"></a>
-                            <a class="waves-effect waves-teal btn lime darken-1 answers-4 answers z-depth-4" value="4"></a>
+                            <a class="btn black-text lime darken-1 answers-1 answers z-depth-4" value="1"></a>
+                            <a class="btn black-text lime darken-1 answers-2 answers z-depth-4" value="2"></a>
+                            <a class="btn black-text lime darken-1 answers-3 answers z-depth-4" value="3"></a>
+                            <a class="btn black-text lime darken-1 answers-4 answers z-depth-4" value="4"></a>
                         </div>
                         <br>
-                        <div class="container">
+                        <div class="container" id="info-box">
                         	<a class="waves-effect waves-teal btn lime darken-1 black-text" id="button">Begin!</a>
-                            <!-- <button type="button" class="btn" id="button">Begin!</button> -->
+                        	<a class="waves-effect waves-teal btn lime darken-1 black-text" id="next">Next</a>
                             <div class="timer" data-seconds-left=30 id="counter"></div>
                             <div id="correct"></div>
                             <div id="wrong"></div>
