--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <div class="row center-align">
             <div class="col s12 m10 offset-m1 l8 offset-l2">
                 <div id="quiz-container">
-                    <h1>Welcome to Nasty Trivia!</h1>
+                    <p class="welcome">Welcome to Nasty Trivia!</p>
                     <p class="welcome">Test your knowledge about a few brave, bright, creative, butt-kicking ladies.</p>
-                    <p class="welcome">When you're done, stick around to read some wisdom from these Nasty Women!</p>
                     <div>
                         <div id="image-container">
                         </div>
