--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <div class="container" id="info-box">
                             <a class="waves-effect waves-teal btn lime darken-1 black-text" id="button">Begin!</a>
                             <a class="waves-effect waves-teal btn lime darken-1 black-text" id="next">Next</a>
+                            <a class="waves-effect waves-teal btn lime darken-1 black-text" id="again">Play Again?</a>
                             <div class="timer" data-seconds-left=30 id="counter"></div>
                             <div id="correct"></div>
                             <div id="wrong"></div>
