--- a/index.html
+++ b/index.html
@@ -42,21 +42,25 @@
                         <div id="quizQuestions">
                         </div>
                         <div id="questionAnswers">
-                            <a class="btn black-text lime darken-1 answers-1 answers z-depth-4" value="1"></a>
-                            <a class="btn black-text lime darken-1 answers-2 answers z-depth-4" value="2"></a>
-                            <a class="btn black-text lime darken-1 answers-3 answers z-depth-4" value="3"></a>
-                            <a class="btn black-text lime darken-1 answers-4 answers z-depth-4" value="4"></a>
+                            <a class="btn black-text lime darken-1 answers-1 answers z-depth-3" value="1"></a>
+                            <a class="btn black-text lime darken-1 answers-2 answers z-depth-3" value="2"></a>
+                            <a class="btn black-text lime darken-1 answers-3 answers z-depth-3" value="3"></a>
+                            <a class="btn black-text lime darken-1 answers-4 answers z-depth-3" value="4"></a>
                         </div>
                         <br>
                         <div class="container" id="info-box">
-                            <a class="waves-effect waves-teal btn lime darken-1 black-text" id="button">Begin!</a>
-                            <a class="waves-effect waves-teal btn lime darken-1 black-text" id="next">Next</a>
-                            <a class="waves-effect waves-teal btn lime darken-1 black-text" id="again">Play Again?</a>
+                            <a class="btn lime darken-1 black-text z-depth-3" id="button">Begin!</a>
+                            <a class="btn lime darken-1 black-text z-depth-3" id="next">Next</a>
+                            <a class="btn lime darken-1 black-text z-depth-3" id="again">Play Again?</a>
                             <div class="timer" data-seconds-left=30 id="counter"></div>
                             <div id="correct"></div>
                             <div id="wrong"></div>
                         </div>
-                        <div id="answerImage">
+                        <div class="row center-align">
+                            <div class="col s12 m8 offset-m2 l6 offset-l3">
+                                <div id="answerImage">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
