--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Nasty Women Trivia</title>
     <!--Link to Favicon-->
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <!-- Viewport setting -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome Link -->
