--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container center my-name">
-                <a href="https://valarier.github.io/valarie-regas/index.html" target="_blank" class="white-text">© 2017 Valarie Regas</a>
+                <a href="https://valarier.github.io/valarie-regas/index.html" target="_blank" class="white-text">&copy; 2017 Valarie Regas</a>
             </div>
         </div>
     </footer>
